# stm32f4-rust-drivers

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: exception.rs  lib.rs  main.rs  stm32f4_gpio.rs  stm32f4_i2c.rs  stm32f4_rcc.rs  stm32f4_systick.rs  stm32f4_usart.rs  stm32f4xx.rs
