[package]
name = "stm32f4-rust-drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-halt = "0.2"

[profile.release]
opt-level = 'z' 
lto = true
codegen-units = 1
debug = true

[lib]
name = "stm32f4_rust_drivers"
path = "src/lib.rs"